feat: crud download task
